@startuml
'https://plantuml.com/class-diagram

class Solution43{
main()
}
Solution43 *-- main
main *-- makeSite
main *-- makeJava
main *-- makeCSS
main *-- makeHTML
main : Scanner scanner
main : String filePath
main : boolean yesJavaScript
main : boolean yesCSS
main : System.out.print
main : String webName
main : String author
main : String createJavaScript
main : String createCSS
main : makeSite ms
main : makeHTML mhtml
main : makeJava mj
main : makeCSS mcss
main : System.out.print()


class makeSite{
String createSite()
String directory
File newFile
newFile.mkdirs()
return created directory
}

class makeJava{
String createJavaScript()
String directory : file path and name
File newFile
newFile.mkdirs()
return created directory
}

class makeCSS{
String createCSS()
String directory : file path and name
File newFile
newFile.mkdirs()
return created directory
}

class makeHTML{
String createHTML()
String directory : file path and name
FileWriter HTMLWriter
return created directory
}

@enduml
